<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/profileImg"
            android:layout_width="155dp"
            android:layout_height="134dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/username_profile"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImg" />

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="133dp"
            android:layout_height="56dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/rounded_button"
            android:text="@string/update_profile"
            android:textColor="@color/green_main"
            app:layout_constraintEnd_toStartOf="@+id/productsBtn"
            app:layout_constraintHorizontal_bias="0.575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_txt" />

        <Button
            android:id="@+id/productsBtn"
            android:layout_width="123dp"
            android:layout_height="52dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="60dp"
            android:text="@string/your_products"
            android:background="@drawable/rounded_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/green_main"
            app:layout_constraintTop_toBottomOf="@+id/name_txt" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>