<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="290dp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/savy_logo"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="65dp"
        tools:srcCompat="@drawable/setimg"
        tools:ignore="MissingConstraints"></ImageView>

    <Button
        android:id="@+id/expandButton"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/general"

        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        app:icon="@drawable/right_arrow"
        app:iconGravity="end"
        app:iconSize="18dp"
        app:iconTint="@color/grey"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="394dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="442dp" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="508dp" />

    <LinearLayout
        android:id="@+id/expandSection"
        android:layout_width="56dp"
        android:layout_height="41dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="MissingConstraints">


    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="407dp"
        android:layout_height="43dp"
        android:text="@string/darkMode"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="451dp"></TextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/darkModeSwitch"
        android:layout_width="47dp"
        android:layout_height="15dp"
        android:layout_gravity="start"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider6"
        app:layout_constraintVertical_bias="0.333"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="362dp" />

    <Button
        android:id="@+id/menu_button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/languages"
        android:textAlignment="viewStart"

        android:textAllCaps="false"
        android:textColor="@color/grey"
        app:icon="@drawable/right_arrow"
        app:iconGravity="end"
        app:iconSize="18dp"
        app:iconTint="@color/grey"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="592dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="532dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/expandButtonTermsAndCondition"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TermsAndCondition"
        android:textAlignment="viewStart"
        android:textAllCaps="false"

        android:textColor="@color/grey"
        app:icon="@drawable/right_arrow"
        app:iconGravity="end"
        app:iconSize="18dp"
        app:iconTint="@color/grey"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="544dp"
        tools:ignore="MissingConstraints" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/logout"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logOut"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/txtFieldError"
        app:icon="@drawable/logout"
        app:iconGravity="end"
        app:iconSize="18dp"
        app:iconTint="@color/txtFieldError"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="667dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>