<?xml version="1.0" encoding="utf-8"?>


        <androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.profile.UpdateProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profilepic"
                android:layout_width="280dp"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_profile"
                >
            </androidx.appcompat.widget.AppCompatImageView>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullnameLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                app:boxStrokeErrorColor="@color/txtFieldError"
                app:errorIconTint="@color/txtFieldError"
                app:errorTextColor="@color/txtFieldError"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_profile"
                app:startIconTint="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullnameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_clear"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numtelLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                app:boxStrokeErrorColor="@color/txtFieldError"
                app:errorIconTint="@color/txtFieldError"
                app:errorTextColor="@color/txtFieldError"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/phone_call"
                app:startIconTint="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numtelEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:hint="@string/numTel"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                app:boxStrokeErrorColor="@color/txtFieldError"
                app:errorIconTint="@color/txtFieldError"
                app:errorTextColor="@color/txtFieldError"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:enabled="false"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/ic_clear"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="177dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/confirm"
                    android:textColor="@color/green_main"
                    android:textColorHighlight="@color/white"
                    android:textSize="20dp"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey" />

                <Button
                    android:id="@+id/btnChangePwd"
                    android:layout_width="195dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/changePwd"
                    android:textColor="@android:color/white"
                    android:textColorHighlight="@color/green_main"
                    android:textSize="13dp"
                    app:layout_constraintStart_toStartOf="parent" />


            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

